Update rose brand color from #FF6B6B to #F7EBEB and fix contact page visuals
- Update CSS variables and Tailwind config for new rose color
- Fix TeamContacts section background color to match brand guidelines
- Remove emojis from security notice for professional appearance
- Update icon colors in various components for consistency
- Improve contact form styling and color scheme
- Update brand guidelines documentation

--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "echo 'No tests specified'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.6",
     "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
     "next": "15.4.6",
@@ -29,6 +34,18 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,mdx}": [
+      "prettier --write"
+    ]
   }
 }
